# tinygym

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  train.py  train_flashrl.py  train_tinygym.py
.github/workflows/: publish.yml
tinygym/: __init__.py  main.py  models.py  qr.py  utils.py
tinygym/envs/: grid.pyx
