[build-system]
requires = ['setuptools', 'wheel', 'Cython', 'numpy']
build-backend = 'setuptools.build_meta'

[project]
name = 'tinygym'
version = '0.0.1'
description = 'Reinforcement learning in tinygrad'
authors = [{name = 'codingfisch', email = 'l_fisc17@wwu.de'}]
readme = 'README.md'
dependencies = ['tinygrad', 'Cython', 'tqdm', 'plotille', 'tensorboard']

[tool.setuptools]
license-files = []
packages = ['tinygym', 'tinygym.envs']
include-package-data = true

[tool.setuptools.package-data]
tinygym = ['envs/*.pyx', 'envs/*.c']
